<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="text_app">서을특별시 버스 정보 어플리케이션</string>

    <string name="text_hint">버스 번호로 검색을 해보세요.</string>
    <string name="fluctate_rate">최근 24시간 변동률</string>
    <string name="max_price">고가</string>
    <string name="min_price">저가</string>

    <string name="btn_show_chart">차트 보기</string>
    <string name="btn_hide_chart">차트 숨기기</string>

    <string name="seoul">서울</string>
    <string name="favorite">즐겨찾기</string>
    <string name="find_map_station">근처 정류장 찾기</string>
    <string name="delete_all">전체 삭제</string>
    <string name="text_no_result">검색 결과가 없습니다.</string>
    <string name="text_loading">지도를 불러오고있습니다.\n잠시만 기다려주세요.</string>

    <string name="popup_delete_all">즐겨찾기 전체삭제를 하시겠습니까?</string>

    <string name="toast_back">뒤로 버튼을 한번 더 누르면 앱을 종료합니다.</string>
    <string name="toast_error">에러가 발생하였습니다. 잠시 후 다시 시도해주세요.</string>
    <string name="toast_error_gps">위치 정보를 불러올수 없습니다. 잠시 후 다시 시도해주세요.</string>
    <string name="toast_add_favorite">즐겨찾기에 추가하였습니다.</string>
    <string name="toast_delete_favorite">즐겨찾기에서 삭제하였습니다.</string>
    <string name="toast_network">네트워크 상태를 확인해주세요.</string>
    <string name="toast_permission">위치 권한을 거부하셨습니다.</string>
    <string name="toast_over_distance">반경 3키로 이내 정류장이 존재하지 않습니다.</string>

    <string name="dialog_gps">GPS 사용을 켜주세요.</string>
    <string name="dialog_location_setting">위치 사용을 위해 설정에서 권한을 항상 허용해주세요.</string>

    <string name="confirm">확인</string>
    <string name="cancel">취소</string>

    <string name="direction">방향</string>
    <string name="transfer">회차</string>
    <string name="subway">지하철</string>
    <string name="bus_list">경유 버스 노선</string>
</resources>